--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,46 +18,16 @@
 
     <script src="./statics/jquery-3.5.1.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <script>
-        function validate() {
-            $.ajax({
-                url:"./invitation/checkInvitation",
-                data:{"invitationCode":$("#invitationCode").val()},
-                success:function (rdata) {
-                    var html = "";
-                    if (rdata.code === -1) {
-                        html = "<div>"+"邀请码不能为空"+"</div>"
-                        $("#myaccountInfo").html(html)
-                    }else if(rdata.code===1){
-                        html = "<div>"+"邀请码不正确"+"</div>";
-                        $("#myaccountInfo").html(html)
-                    }else if(rdata.code===2){
-                        html = "<div>"+"邀请码已过期,请重新购买"+"</div>";
-                        $("#myaccountInfo").html(html)
-                    }else{
-                        html="<div id='myaccount'>" +"账号:" +rdata.data.accountEmail+"</div>"
-                            +"<div id='mypassword'>" +"密码:" +rdata.data.accountPassword+"</div>";
-                        $("#myaccountInfo").html(html)
-                        document.location.href="/home.html?invitationCode="+$("#invitationCode").val()+"&captchaTo="+rdata.data.accountEmail+"&mypwd="+rdata.data.accountPassword;
-                    }
-                }
-            })
-        }
-    </script>
 </head>
 <body>
-
-
-
 <div>
     <div class="container">
         <form name="myForm" >
             <div class="form-group">
                 <label>邀请码</label>
-                <input name="invitationCode" type="text" class="form-control" id="invitationCode" placeholder="请输入您的邀请码"  required="required">
+                <input name="invitationCode" type="text" class="form-control" id="invitationCode" placeholder="请输入您的邀请码"  required="true">
             </div>
-            <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#myModal" style="background-color: #398439" onclick="validate()" >提交</button>
+            <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#myModal" style="background-color: #398439" onclick="return validate()" >提交</button>
         </form>
     </div>
 </div>
@@ -90,6 +60,35 @@
     </div><!-- /.modal -->
 </div>
 
+<script>
+    function validate() {
+        if ($("#invitationCode").val()=="") {
+            html = "<div>"+"邀请码不能为空"+"</div>";
+            $("#myaccountInfo").html(html)
+            return false;
+        }
+        $.ajax({
+            url:"./invitation/checkInvitation",
+            data:{"invitationCode":$("#invitationCode").val()},
+            success:function (rdata) {
+                var html = "";
+                if(rdata.code===1){
+                    html = "<div>"+"邀请码不正确"+"</div>";
+                    $("#myaccountInfo").html(html)
+                }else if(rdata.code===2){
+                    html = "<div>"+"邀请码已过期,请重新购买"+"</div>";
+                    $("#myaccountInfo").html(html)
+                }else{
+                    $("#myModal").modal('hide');
+                   /* html="<div id='myaccount'>" +"账号:" +rdata.data.accountEmail+"</div>"
+                        +"<div id='mypassword'>" +"密码:" +rdata.data.accountPassword+"</div>";
+                    $("#myaccountInfo").html(html)*/
+                    document.location.href="/home.html?invitationCode="+$("#invitationCode").val()+"&captchaTo="+rdata.data.accountEmail+"&mypwd="+rdata.data.accountPassword;
+                }
+            }
+        })
+    }
+</script>
 
 
 </body>
