delete sensitive word

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -20,7 +20,7 @@
             <div id="myaccount">账号:</div>
             <div id="mypassword">密码:</div>
             <div>
-                <p class="forgot-pass"><span style="color: #27282a"><strong>注意！</strong></span><a href="javascript:">必须先在百度云点击获取验证码</a></p>
+                <p class="forgot-pass"><span style="color: #27282a"><strong>注意！</strong></span><a href="javascript:">必须先用账号密码登录后,点击获取验证码</a></p>
 
                 <p class="forgot-pass"><a href="javascript:">再点击下方按钮</a></p>
             </div>
