--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -28,6 +28,8 @@
             </div>
 
             <button type="button" id="btn" class="submit" onclick="getCaptchaCode()">获取验证码</button>
+            <span id="myremaincount"></span>
+
         </div>
 
     </div>
@@ -99,6 +101,8 @@
                         alert("还没有收到验证码")
                     }else {
                         alert(captchaData.data.captchaCode);
+                        var myremaincount = captchaData.data.remainCount;
+                        document.getElementById("myremaincount").innerHTML = "今日剩余获取次数验证码:" + myremaincount + "次"
                     }
                 }
             })
