udpate some path

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HTML注册登录页面模板</title>
-<link rel="stylesheet" href="css/style.css">
+<title>账号密码</title>
+<link rel="stylesheet" href="./css/style.css">
 
     <script src="./statics/jquery-3.5.1.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 
 </head>
 
@@ -33,12 +33,6 @@
         </div>
 
     </div>
-
-
-	
-<!--	<div style="text-align:center;">-->
-<!--<p>还没获得邮箱账号信息?：<a href="login_bak.html" target="_blank">邀请码验证</a></p>-->
-<!--</div>-->
 
     <script>
         $('#btn').click(function() {
