--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>邀请码登录</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
                     &times;
                 </button>
                 <h4 class="modal-title" id="myModalLabel">
-                    邀请码校验结果
+                    邀请码核对中,请稍等
                 </h4>
             </div>
             <div class="modal-body">
@@ -84,7 +84,7 @@
                    /* html="<div id='myaccount'>" +"账号:" +rdata.data.accountEmail+"</div>"
                         +"<div id='mypassword'>" +"密码:" +rdata.data.accountPassword+"</div>";
                     $("#myaccountInfo").html(html)*/
-                    document.location.href="/home.html?invitationCode="+$("#invitationCode").val()+"&captchaTo="+rdata.data.accountEmail+"&mypwd="+rdata.data.accountPassword+"&invitationDeadlinetime="+rdata.data.invitationDeadlinetime;
+                    document.location.href="./home.html?invitationCode="+$("#invitationCode").val()+"&captchaTo="+rdata.data.accountEmail+"&mypwd="+rdata.data.accountPassword+"&invitationDeadlinetime="+rdata.data.invitationDeadlinetime;
                 }
             }
         })
