--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -81,7 +81,7 @@
         document.getElementById("mydeadlinetime").innerHTML = "到期时间:"+urlMsg.invitationDeadlinetime;
         function getCaptchaCode() {
             $.ajax({
-                url:"./invitation/searchCaptcha?invitationCode="+urlMsg.invitationCode+"&captchaTo="+urlMsg.captchaTo,
+                url:"http://localhost:8080/invitation/searchCaptcha?invitationCode="+urlMsg.invitationCode+"&captchaTo="+urlMsg.captchaTo,
                 success:function (captchaData) {
                     if (captchaData.code===1){
                         alert("邀请码不正确")
@@ -93,6 +93,8 @@
                         alert("一个邀请码一天只能获取验证码不超过5次")
                     }else if (captchaData.code === 5){
                         alert("还没有收到验证码")
+                    }else if (captchaData.code === 6){
+                        alert("验证码已过期")
                     }else {
                         alert(captchaData.data.captchaCode);
                         var myremaincount = captchaData.data.remainCount;
