--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -27,7 +27,7 @@
                 <p class="forgot-pass"><a href="javascript:">再点击下方按钮</a></p>
             </div>
 
-            <button type="button" id="btn" class="submit" onclick="getCaptchaCode()">获取验证码</button>
+            <button type="button" id="btn" class="submit" onclick="getCaptchaCode()">获取验证码(1日只能获取<strong>5</strong>次)</button>
             <span id="myremaincount"></span>
 
         </div>
@@ -36,10 +36,10 @@
 
     <script>
         $('#btn').click(function() {
-            let count = 30;
+            let count = 60;
             const countDown = setInterval(() => {
                 if (count === 0) {
-                    $('#btn').text('获取验证码').removeAttr('disabled');
+                    $('#btn').text('获取验证码(1日只能获取5次)').removeAttr('disabled');
                     $('#btn').css({
                         background: '#ff9400',
                         color: '#fff',
@@ -92,14 +92,15 @@
                     }else if (captchaData.code===4) {
                         alert("一个邀请码一天只能获取验证码不超过5次")
                     }else if (captchaData.code === 5){
-                        alert("还没有收到验证码")
+                        alert("还没有收到验证码,验证码获取时间预计1分钟,请等待")
                     }else if (captchaData.code === 6){
                         alert("验证码已过期")
                     }else {
-                        alert(captchaData.data.captchaCode);
-                        var myremaincount = captchaData.data.remainCount;
-                        document.getElementById("myremaincount").innerHTML = "今日剩余获取次数验证码:" + myremaincount + "次"
+                        console.log(captchaData)
+                        alert("验证码:" +captchaData.data.captchaCode+" 请在1小时内完成验证,超过1小时请重新获取");
                     }
+                    var myremaincount = captchaData.data.remainCount;
+                    document.getElementById("myremaincount").innerHTML = "今日剩余获取验证码次数:" + myremaincount + "次"
                 }
             })
         }
