update button of submit

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -58,7 +58,7 @@
                 </p>
             </div>
 
-            <button type="button" id="btn" class="submit" onclick="getCaptchaCode()">获取验证码(1日只能获取<strong>5</strong>次)</button>
+            <button type="button" id="btn" class="submit" onclick="getCaptchaCode()">获取邮箱验证码(1日只能获取<strong>5</strong>次)</button>
             <div id="myremaincount" style="text-align: center"></div>
         </div>
 
