--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -43,8 +43,7 @@
     <div class="content-header">
         <h1>管理<small>账号管理</small></h1>
         <el-breadcrumb separator-class="el-icon-arrow-right" class="breadcrumb">
-            <el-breadcrumb-item :to="{ path: '/' }">首页</el-breadcrumb-item>
-            <el-breadcrumb-item>管理</el-breadcrumb-item>
+            <el-breadcrumb-item><a href="./management.html">管理中心</a></el-breadcrumb-item>
             <el-breadcrumb-item>账号管理</el-breadcrumb-item>
         </el-breadcrumb>
     </div>
