--- a/src/main/webapp/invitations.html
+++ b/src/main/webapp/invitations.html
@@ -43,8 +43,8 @@
     <div class="content-header">
         <h1>管理<small>邀请码管理</small></h1>
         <el-breadcrumb separator-class="el-icon-arrow-right" class="breadcrumb">
-            <el-breadcrumb-item :to="{ path: '/' }">首页</el-breadcrumb-item>
-            <el-breadcrumb-item>管理</el-breadcrumb-item>
+<!--            <el-breadcrumb-item :to="{ path: './management.html' }">管理中心</el-breadcrumb-item>-->
+            <el-breadcrumb-item><a href="./management.html">管理中心</a></el-breadcrumb-item>
             <el-breadcrumb-item>邀请码管理</el-breadcrumb-item>
         </el-breadcrumb>
     </div>
