--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -71,7 +71,7 @@
                 <el-table-column label="操作" >
                     <template slot-scope="scope">
                         <el-button @click="edit(scope.row.accountId)" size="mini" type="primary" size="small">修改</el-button>
-                        <el-button @click="dele(scope.row.accountId)" size="mini" type="danger" size="small">删除</el-button>
+                        <el-button @click="dele(scope.row.accountEmail)" size="mini" type="danger" size="small">删除</el-button>
                     </template>
                 </el-table-column>
             </el-table>
@@ -163,13 +163,13 @@
                     // this.imageUrl=this.pojo.image //显示图片  如页面有图片上传功能放开注释
                 })
             },
-            dele (accountId){
+            dele (accountEmail){
                 this.$confirm('确定要删除此记录吗?', '提示', {
                     confirmButtonText: '确定',
                     cancelButtonText: '取消',
                     type: 'warning'
                 }).then( () => {
-                    axios.get(`./account/delete?id=${accountId}`).then(response => {
+                    axios.get(`./account/deleteByEmail?email=${accountEmail}`).then(response => {
                         this.fetchData (); //刷新列表
                     })
                 })
