--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -26,7 +26,7 @@
             display: inline-block;
             width: 16px;
             height: 16px;
-            background: transparent     url(./images/lock3.png) no-repeat center center;
+            background: transparent     url(images/suotou3.png) no-repeat center center;
             background-size: 16px auto;
             margin-right: 4px;
             vertical-align: -2px;
