--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,8 +20,8 @@
         html { height: 100%; }
         body { height: 100%; background: #fff  50% 50% no-repeat; background-size: cover;}
         .dowebok { position: absolute; left: 50%; top: 50%; width: 430px; height: 550px; margin: -300px 0 0 -215px; overflow: hidden;}
-        .contact{float:right; width: 50px;height:50px;background: url(./images/lock3.png) 0 0 no-repeat;}
-        .logo { width: 104px; height: 104px; margin: 50px auto 80px; background: url(./images/lock.png) 0 0 no-repeat; }
+        .contact{float:right; width: 50px;height:50px;background: url(images/suotou3.png) 0 0 no-repeat;}
+        .logo { width: 104px; height: 104px; margin: 50px auto 80px; background: url(images/suotou.png) 0 0 no-repeat; }
         .form-item { position: relative; width: 360px; margin: 0 auto; padding-bottom: 30px;}
         .form-item input { width: 288px; height: 48px; padding-left: 70px; border: 1px solid #fff; border-radius: 25px; font-size: 18px; color: #fff; background-color: transparent; outline: none;}
         .form-item button { width: 360px; height: 50px; border: 0; border-radius: 25px; font-size: 18px; color: #1f6f4a; outline: none; cursor: pointer; background-color: #fff; }
@@ -53,7 +53,7 @@
             display: inline-block;
             width: 16px;
             height: 16px;
-            background: transparent     url(./images/lock3.png) no-repeat center center;
+            background: transparent     url(images/suotou3.png) no-repeat center center;
             background-size: 16px auto;
             margin-right: 4px;
             vertical-align: -2px;
