--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -11,6 +11,7 @@
     <!-- 引入样式 -->
     <link rel="stylesheet" href="./css/theme-chalk.css">
     <link rel="stylesheet" href="./css/login_style.css">
+    <link rel="icon" type="image/png" href="./images/suotou3.png"/>
 </head>
 
 <body class="mainBg">
